--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -40,7 +40,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -136,11 +136,6 @@
     <ClInclude Include="DragFloat2.h" />
     <ClInclude Include="DragFloat3.h" />
     <ClInclude Include="DragFloat4.h" />
-    <ClInclude Include="Graph.h" />
-    <ClInclude Include="IUndoEditor.h" />
-    <ClInclude Include="MathNode.h" />
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="ShaderEditor.h" />
     <ClInclude Include="testgraph.h" />
     <ClInclude Include="Group.h" />
     <ClInclude Include="IDataWidget.h" />
@@ -178,7 +173,6 @@
     <ClInclude Include="Spacing.h" />
     <ClInclude Include="TreeNode.h" />
     <ClInclude Include="UIManger.h" />
-    <ClInclude Include="VariableNode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Canvas.cpp" />
@@ -189,9 +183,7 @@
     <ClCompile Include="DragFloat2.cpp" />
     <ClCompile Include="DragFloat3.cpp" />
     <ClCompile Include="DragFloat4.cpp" />
-    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Group.cpp" />
-    <ClCompile Include="IUndoEditor.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
     <ClCompile Include="imgui_draw.cpp" />
@@ -209,13 +201,10 @@
     <ClCompile Include="IPanelTransformable.cpp" />
     <ClCompile Include="IWidget.cpp" />
     <ClCompile Include="IWidgetContainer.cpp" />
-    <ClCompile Include="MathNode.cpp" />
     <ClCompile Include="MenuList.cpp" />
     <ClCompile Include="NewLine.cpp" />
-    <ClCompile Include="Node.cpp" />
     <ClCompile Include="PanelMenuBar.cpp" />
     <ClCompile Include="PanelWindow.cpp" />
-    <ClCompile Include="ShaderEditor.cpp" />
     <ClCompile Include="SliderFloat.cpp" />
     <ClCompile Include="SliderFloat2.cpp" />
     <ClCompile Include="SliderFloat3.cpp" />
@@ -224,13 +213,11 @@
     <ClCompile Include="TreeNode.cpp" />
     <ClCompile Include="UIManger.cpp" />
     <ClCompile Include="UITest.cpp" />
-    <ClCompile Include="VariableNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Canvas.inl" />
     <None Include="IDataWidget.inl" />
     <None Include="IWidgetContainer.inl" />
-    <None Include="VariableNode.inl" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tools\Tools.vcxproj">
