--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=407,516
 Size=400,400
 Collapsed=0
 
@@ -10,22 +10,42 @@ Collapsed=0
 
 [Window][##dockspace]
 Pos=0,0
-Size=1707,996
+Size=2560,1369
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=549,977
+Size=548,1350
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][TestPanel1]
-Pos=668,103
+Pos=117,368
+Size=433,320
+Collapsed=0
+
+[Window][ZZZ]
+Pos=89,212
+Size=867,570
+Collapsed=0
+
+[Window][2]
+Pos=608,169
 Size=1039,729
 Collapsed=0
 
+[Window][ShaderEditor2]
+Pos=563,112
+Size=1094,680
+Collapsed=0
+
+[Window][ShaderEditor1]
+Pos=625,261
+Size=1060,644
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=X NoWindowMenuButton=1
-  DockNode  ID=0x00000001 Parent=0x3F20F338 SizeRef=549,1350 NoWindowMenuButton=1 Selected=0xE927CF2F
-  DockNode  ID=0x00000002 Parent=0x3F20F338 SizeRef=2009,1350 CentralNode=1 NoWindowMenuButton=1
+DockSpace   ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=2560,1350 Split=X NoWindowMenuButton=1
+  DockNode  ID=0x00000001 Parent=0x3F20F338 SizeRef=548,977 NoWindowMenuButton=1 Selected=0xE927CF2F
+  DockNode  ID=0x00000002 Parent=0x3F20F338 SizeRef=1157,977 CentralNode=1 NoWindowMenuButton=1
 
