--- a/Editor/Editor.vcxproj.filters
+++ b/Editor/Editor.vcxproj.filters
@@ -45,25 +45,25 @@
     <ClInclude Include="Context.h">
       <Filter>头文件\Core</Filter>
     </ClInclude>
-    <ClInclude Include="MenuBar.h">
+    <ClInclude Include="MainMenuBar.h">
       <Filter>头文件\Panels</Filter>
     </ClInclude>
-    <ClInclude Include="..\UI\Graph.h">
+    <ClInclude Include="Graph.h">
       <Filter>头文件\Panels\ShaderEditor</Filter>
     </ClInclude>
-    <ClInclude Include="..\UI\ISupportUndo.h">
+    <ClInclude Include="ISupportUndo.h">
       <Filter>头文件\Panels\ShaderEditor</Filter>
     </ClInclude>
-    <ClInclude Include="..\UI\MathNode.h">
+    <ClInclude Include="MathNode.h">
       <Filter>头文件\Panels\ShaderEditor</Filter>
     </ClInclude>
-    <ClInclude Include="..\UI\Node.h">
+    <ClInclude Include="Node.h">
       <Filter>头文件\Panels\ShaderEditor</Filter>
     </ClInclude>
-    <ClInclude Include="..\UI\ShaderEditor.h">
+    <ClInclude Include="ShaderEditor.h">
       <Filter>头文件\Panels\ShaderEditor</Filter>
     </ClInclude>
-    <ClInclude Include="..\UI\VariableNode.h">
+    <ClInclude Include="VariableNode.h">
       <Filter>头文件\Panels\ShaderEditor</Filter>
     </ClInclude>
   </ItemGroup>
@@ -80,30 +80,31 @@
     <ClCompile Include="appTest.cpp">
       <Filter>源文件\Test</Filter>
     </ClCompile>
-    <ClCompile Include="MenuBar.cpp">
+    <ClCompile Include="MainMenuBar.cpp">
       <Filter>源文件\Panels</Filter>
     </ClCompile>
-    <ClCompile Include="..\UI\Graph.cpp">
+    <ClCompile Include="VariableNode.cpp">
       <Filter>源文件\Panels\ShaderEditor</Filter>
     </ClCompile>
-    <ClCompile Include="..\UI\ISupportUndo.cpp">
+    <ClCompile Include="Graph.cpp">
       <Filter>源文件\Panels\ShaderEditor</Filter>
     </ClCompile>
-    <ClCompile Include="..\UI\MathNode.cpp">
+    <ClCompile Include="ISupportUndo.cpp">
       <Filter>源文件\Panels\ShaderEditor</Filter>
     </ClCompile>
-    <ClCompile Include="..\UI\Node.cpp">
+    <ClCompile Include="MathNode.cpp">
       <Filter>源文件\Panels\ShaderEditor</Filter>
     </ClCompile>
-    <ClCompile Include="..\UI\ShaderEditor.cpp">
+    <ClCompile Include="Node.cpp">
       <Filter>源文件\Panels\ShaderEditor</Filter>
     </ClCompile>
-    <ClCompile Include="..\UI\VariableNode.cpp">
+    <ClCompile Include="ShaderEditor.cpp">
       <Filter>源文件\Panels\ShaderEditor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\UI\VariableNode.inl">
+    <None Include="imgui.ini" />
+    <None Include="VariableNode.inl">
       <Filter>头文件\Panels\ShaderEditor</Filter>
     </None>
   </ItemGroup>
