--- a/UI/UI.vcxproj.filters
+++ b/UI/UI.vcxproj.filters
@@ -219,6 +219,9 @@
     <ClInclude Include="UIManger.h">
       <Filter>头文件\Manger</Filter>
     </ClInclude>
+    <ClInclude Include="Columns.h">
+      <Filter>头文件\Widget\Layout</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IWidget.cpp">
@@ -345,6 +348,9 @@
     </None>
     <None Include="Canvas.inl">
       <Filter>头文件\Panel</Filter>
+    </None>
+    <None Include="Columns.inl">
+      <Filter>头文件\Widget\Layout</Filter>
     </None>
   </ItemGroup>
 </Project>
