--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -45,8 +45,13 @@ Size=1060,644
 Collapsed=0
 
 [Window][Shader Editor1]
-Pos=666,199
+Pos=442,139
 Size=1480,913
+Collapsed=0
+
+[Window][Shader Editor##1]
+Pos=510,93
+Size=1294,749
 Collapsed=0
 
 [Docking][Data]
