--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -31,41 +31,65 @@
     <Filter Include="头文件\Global">
       <UniqueIdentifier>{630a525f-9c48-4e58-b101-8277212e6408}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\AssetManger">
+      <UniqueIdentifier>{0f661359-7f88-4e82-9e00-a7d82dcde769}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\AssetManger">
+      <UniqueIdentifier>{b6ca0843-133d-4d83-a7d9-8e86e005aa2c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Asset\Loader">
+      <UniqueIdentifier>{6a12bc09-4088-4eb9-b70d-eedb053431a6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Asset\Loader">
+      <UniqueIdentifier>{4260cf03-8f30-4d39-8ba2-ab99984c851f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IAssetManger.h">
-      <Filter>头文件\Asset</Filter>
-    </ClInclude>
-    <ClInclude Include="MaterialManger.h">
-      <Filter>头文件\Asset</Filter>
-    </ClInclude>
-    <ClInclude Include="ShaderManger.h">
-      <Filter>头文件\Asset</Filter>
-    </ClInclude>
     <ClInclude Include="ServiceLocator.h">
       <Filter>头文件\Global</Filter>
     </ClInclude>
     <ClInclude Include="TextureManger.h">
+      <Filter>头文件\AssetManger</Filter>
+    </ClInclude>
+    <ClInclude Include="IAssetManger.h">
+      <Filter>头文件\AssetManger</Filter>
+    </ClInclude>
+    <ClInclude Include="MaterialManger.h">
+      <Filter>头文件\AssetManger</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderManger.h">
+      <Filter>头文件\AssetManger</Filter>
+    </ClInclude>
+    <ClInclude Include="IAsset.h">
       <Filter>头文件\Asset</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>头文件\Asset</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureLoader.h">
+      <Filter>头文件\Asset\Loader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
       <Filter>头文件\Interface</Filter>
     </ClCompile>
+    <ClCompile Include="TextureManger.cpp">
+      <Filter>源文件\AssetManger</Filter>
+    </ClCompile>
     <ClCompile Include="MaterialManger.cpp">
-      <Filter>源文件\Asset</Filter>
+      <Filter>源文件\AssetManger</Filter>
     </ClCompile>
     <ClCompile Include="ShaderManger.cpp">
-      <Filter>源文件\Asset</Filter>
+      <Filter>源文件\AssetManger</Filter>
     </ClCompile>
-    <ClCompile Include="TextureManger.cpp">
-      <Filter>源文件\Asset</Filter>
+    <ClCompile Include="TextureLoader.cpp">
+      <Filter>源文件\Asset\Loader</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="IAssetManger.inl">
-      <Filter>头文件\Asset</Filter>
+      <Filter>头文件\AssetManger</Filter>
     </None>
   </ItemGroup>
 </Project>
