--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -15,9 +15,9 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=548,977
+Size=692,662
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][TestPanel1]
 Pos=117,368
@@ -50,12 +50,21 @@ Size=1480,913
 Collapsed=0
 
 [Window][Shader Editor##1]
-Pos=510,93
-Size=1294,749
+Pos=694,19
+Size=1013,662
 Collapsed=0
+DockId=0x00000004,0
+
+[Window][Asset Browser##2]
+Pos=0,683
+Size=1707,313
+Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace   ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=X NoWindowMenuButton=1
-  DockNode  ID=0x00000001 Parent=0x3F20F338 SizeRef=548,977 NoWindowMenuButton=1 Selected=0xE927CF2F
-  DockNode  ID=0x00000002 Parent=0x3F20F338 SizeRef=1157,977 CentralNode=1 NoWindowMenuButton=1
+DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1707,977 Split=Y NoWindowMenuButton=1
+  DockNode    ID=0x00000001 Parent=0x3F20F338 SizeRef=1707,662 Split=X NoWindowMenuButton=1
+    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=692,977 NoWindowMenuButton=1 Selected=0xE927CF2F
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1013,977 CentralNode=1 NoWindowMenuButton=1 Selected=0x47F63A4B
+  DockNode    ID=0x00000003 Parent=0x3F20F338 SizeRef=1707,313 NoWindowMenuButton=1 Selected=0x6AB70705
 
